PDFService Fixed